samples/_failures_safe/1761787201_498ed4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d13e152.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
